# franklin

./: .gitignore  .readthedocs.yml  .travis.yml  README.rst  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat  publishers.rst
franklin/: __init__.py  article.py  config.py  exceptions.py  fetch_doi.py  journals.py  orgmode.py  publishers.py
tests/: test_article.py  test_bibtex.py  test_fetch_doi.py  test_journals.py  test_orgmode.py  test_publishers.py
