[project]
name = "franklin"
version = "0.14"
authors = [
  { name="Mark Wolfman", email="wolfman@anl.gov" },
]
description = "Retrieve scientific papers and manage associated citations."
readme = "README.rst"
# requires-python = ">=3.7,<3.11"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
  "Topic :: Scientific/Engineering",
]
dependencies = ['bibtexparser', 'requests', 'tqdm', 'pandas', 'titlecase', 'orgparse', "pyPDF2"]

[project.optional-dependencies]

dev = ["black", "pytest", "build", "twine", "flake8"]

[project.urls]
"Homepage" = "https://github.com/canismarko/franklin"

[project.scripts]
fetch-doi = "franklin.fetch_doi:main"
abbreviate-journals = "franklin.journals:abbreviate_journals_cli"
dedupe-notes = "franklin.orgmode:dedupe_notes"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
